--- a/R/Exploring Global Life Expectancy Trend/notebook.ipynb
+++ b/R/Exploring Global Life Expectancy Trend/notebook.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "id": "bf55d988-22d4-4f7a-a6b9-073809760776",
    "metadata": {
     "executionCancelledAt": null,
@@ -73,59 +73,44 @@
    "source": [
     "library(dplyr)\n",
     "library(tidyr)\n",
-    "library(ggplot2)\n",
+    "library(ggplot2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0354627c",
+   "metadata": {},
+   "source": [
+    "Analyze and visualize global life expectancy data with a focus on gender disparities, using a United Nations dataset. As part of your analysis, answer the following key questions:\n",
     "\n",
-    "life_expectancy = read.csv(\"datasets/UNdata.csv\") # nolint\n",
-    "head(life_expectancy)"
+    "Does the Value column contain any missing data?\n",
+    "\n",
+    "Save your answer as a boolean variable (TRUE or FALSE) named missing.\n",
+    "\n",
+    "How does life expectancy differ between men and women across countries overall, in the 2000-2005 period? \n",
+    "Save your answer as a variable named subgroup with the value \"Female\" if female life expectancy is higher, and \"Male\" if male life expectancy is higher.\n",
+    "\n",
+    "Which countries exhibit the largest disparities in life expectancy between genders, in the 2000-2005 subgroup? \n",
+    "Save the top 3 countries with the largest male-female disparities as a variable named disparities."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "71997b6d",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "also installing the dependencies 'fansi', 'utf8', 'pkgconfig', 'withr', 'cli', 'generics', 'glue', 'lifecycle', 'magrittr', 'pillar', 'R6', 'rlang', 'tibble', 'tidyselect', 'vctrs'\n",
-      "\n",
-      "Warning message:\n",
-      "\"unable to access index for repository https://cran.r-project.org/bin/windows/contrib/3.6:\n",
-      "  cannot open URL 'https://cran.r-project.org/bin/windows/contrib/3.6/PACKAGES'\"Packages which are only available in source form, and may need\n",
-      "  compilation of C/C++/Fortran: 'fansi' 'utf8' 'cli' 'glue' 'magrittr'\n",
-      "  'rlang' 'tibble' 'tidyselect' 'vctrs' 'dplyr'\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  These will not be installed\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "installing the source packages 'pkgconfig', 'withr', 'generics', 'lifecycle', 'pillar', 'R6'\n",
-      "\n",
-      "Warning message in install.packages(\"dplyr\"):\n",
-      "\"installation of package 'lifecycle' had non-zero exit status\"Warning message in install.packages(\"dplyr\"):\n",
-      "\"installation of package 'pillar' had non-zero exit status\""
-     ]
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "life_expectancy = read.csv(\"datasets/UNdata.csv\") # nolint"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6b9572fe",
    "metadata": {
     "vscode": {
@@ -134,20 +119,79 @@
    },
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in library(dplyr): there is no package called 'dplyr'\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(dplyr): there is no package called 'dplyr'\nTraceback:\n",
-      "1. library(dplyr)"
-     ]
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>Country.or.Area</th><th scope=col>Subgroup</th><th scope=col>Year</th><th scope=col>Source</th><th scope=col>Unit</th><th scope=col>Value</th><th scope=col>Value.Footnotes</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Afghanistan                                                  </td><td>Female                                                       </td><td>2000-2005                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
+       "\t<tr><td>Afghanistan                                                  </td><td>Female                                                       </td><td>1995-2000                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
+       "\t<tr><td>Afghanistan                                                  </td><td>Female                                                       </td><td>1990-1995                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
+       "\t<tr><td>Afghanistan                                                  </td><td>Female                                                       </td><td>1985-1990                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>41                                                           </td><td>                                                             </td></tr>\n",
+       "\t<tr><td>Afghanistan                                                  </td><td>Male                                                         </td><td>2000-2005                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
+       "\t<tr><td>Afghanistan                                                  </td><td>Male                                                         </td><td>1995-2000                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|lllllll}\n",
+       " Country.or.Area & Subgroup & Year & Source & Unit & Value & Value.Footnotes\\\\\n",
+       "\\hline\n",
+       "\t Afghanistan                                                       & Female                                                            & 2000-2005                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
+       "\t Afghanistan                                                       & Female                                                            & 1995-2000                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
+       "\t Afghanistan                                                       & Female                                                            & 1990-1995                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
+       "\t Afghanistan                                                       & Female                                                            & 1985-1990                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 41                                                                &                                                                  \\\\\n",
+       "\t Afghanistan                                                       & Male                                                              & 2000-2005                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
+       "\t Afghanistan                                                       & Male                                                              & 1995-2000                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "| Country.or.Area | Subgroup | Year | Source | Unit | Value | Value.Footnotes |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| Afghanistan                                                   | Female                                                        | 2000-2005                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
+       "| Afghanistan                                                   | Female                                                        | 1995-2000                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
+       "| Afghanistan                                                   | Female                                                        | 1990-1995                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
+       "| Afghanistan                                                   | Female                                                        | 1985-1990                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 41                                                            |                                                               |\n",
+       "| Afghanistan                                                   | Male                                                          | 2000-2005                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
+       "| Afghanistan                                                   | Male                                                          | 1995-2000                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Country.or.Area Subgroup Year     \n",
+       "1 Afghanistan     Female   2000-2005\n",
+       "2 Afghanistan     Female   1995-2000\n",
+       "3 Afghanistan     Female   1990-1995\n",
+       "4 Afghanistan     Female   1985-1990\n",
+       "5 Afghanistan     Male     2000-2005\n",
+       "6 Afghanistan     Male     1995-2000\n",
+       "  Source                                                        Unit  Value\n",
+       "1 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
+       "2 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
+       "3 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
+       "4 UNPD_World Population Prospects_2006 (International estimate) Years 41   \n",
+       "5 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
+       "6 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
+       "  Value.Footnotes\n",
+       "1                \n",
+       "2                \n",
+       "3                \n",
+       "4                \n",
+       "5                \n",
+       "6                "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "head(life_expectancy)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e1296a1e-50bb-4ad5-83e1-bf1bc59680b5",
    "metadata": {
     "executionCancelledAt": null,
@@ -160,10 +204,21 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in life_expectancy %>% filter(is.na(Value)): could not find function \"%>%\"\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in life_expectancy %>% filter(is.na(Value)): could not find function \"%>%\"\nTraceback:\n"
+     ]
+    }
+   ],
    "source": [
     "# Start coding here\n",
-    "# Use as many cells as you need"
+    "# Use as many cells as you need\n",
+    "life_expectancy %>%\n",
+    "  filter(is.na(Value))"
    ]
   }
  ],
