--- a/R/Exploring Global Life Expectancy Trend/notebook.ipynb
+++ b/R/Exploring Global Life Expectancy Trend/notebook.ipynb
@@ -31,52 +31,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "bf55d988-22d4-4f7a-a6b9-073809760776",
-   "metadata": {
-    "executionCancelledAt": null,
-    "executionTime": 2294,
-    "lastExecutedAt": 1725376107202,
-    "lastExecutedByKernel": "5e38aed1-e095-484f-bb9f-9d68ad89ee2b",
-    "lastScheduledRunId": null,
-    "lastSuccessfullyExecutedCode": "library(dplyr)\nlibrary(tidyr)\nlibrary(ggplot2)\n\nlife_expectancy=read.csv(\"datasets/UNdata.csv\")\nhead(life_expectancy)",
-    "outputsMetadata": {
-     "0": {
-      "height": 311,
-      "type": "stream"
-     },
-     "1": {
-      "height": 266,
-      "type": "dataFrame"
-     },
-     "2": {
-      "height": 196,
-      "type": "dataFrame"
-     }
-    },
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in library(dplyr): there is no package called 'dplyr'\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in library(dplyr): there is no package called 'dplyr'\nTraceback:\n",
-      "1. library(dplyr)"
-     ]
-    }
-   ],
-   "source": [
-    "library(dplyr)\n",
-    "library(tidyr)\n",
-    "library(ggplot2)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "0354627c",
    "metadata": {},
@@ -96,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "71997b6d",
    "metadata": {
     "vscode": {
@@ -105,120 +59,119 @@
    },
    "outputs": [],
    "source": [
+    "library(dplyr)\n",
+    "library(tidyr)\n",
+    "library(ggplot2)\n",
     "life_expectancy = read.csv(\"datasets/UNdata.csv\") # nolint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6b9572fe",
+   "execution_count": null,
+   "id": "a6c65ab6",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th scope=col>Country.or.Area</th><th scope=col>Subgroup</th><th scope=col>Year</th><th scope=col>Source</th><th scope=col>Unit</th><th scope=col>Value</th><th scope=col>Value.Footnotes</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>Afghanistan                                                  </td><td>Female                                                       </td><td>2000-2005                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
-       "\t<tr><td>Afghanistan                                                  </td><td>Female                                                       </td><td>1995-2000                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
-       "\t<tr><td>Afghanistan                                                  </td><td>Female                                                       </td><td>1990-1995                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
-       "\t<tr><td>Afghanistan                                                  </td><td>Female                                                       </td><td>1985-1990                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>41                                                           </td><td>                                                             </td></tr>\n",
-       "\t<tr><td>Afghanistan                                                  </td><td>Male                                                         </td><td>2000-2005                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
-       "\t<tr><td>Afghanistan                                                  </td><td>Male                                                         </td><td>1995-2000                                                    </td><td>UNPD_World Population Prospects_2006 (International estimate)</td><td>Years                                                        </td><td>42                                                           </td><td>                                                             </td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|lllllll}\n",
-       " Country.or.Area & Subgroup & Year & Source & Unit & Value & Value.Footnotes\\\\\n",
-       "\\hline\n",
-       "\t Afghanistan                                                       & Female                                                            & 2000-2005                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
-       "\t Afghanistan                                                       & Female                                                            & 1995-2000                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
-       "\t Afghanistan                                                       & Female                                                            & 1990-1995                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
-       "\t Afghanistan                                                       & Female                                                            & 1985-1990                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 41                                                                &                                                                  \\\\\n",
-       "\t Afghanistan                                                       & Male                                                              & 2000-2005                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
-       "\t Afghanistan                                                       & Male                                                              & 1995-2000                                                         & UNPD\\_World Population Prospects\\_2006 (International estimate) & Years                                                             & 42                                                                &                                                                  \\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "| Country.or.Area | Subgroup | Year | Source | Unit | Value | Value.Footnotes |\n",
-       "|---|---|---|---|---|---|---|\n",
-       "| Afghanistan                                                   | Female                                                        | 2000-2005                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
-       "| Afghanistan                                                   | Female                                                        | 1995-2000                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
-       "| Afghanistan                                                   | Female                                                        | 1990-1995                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
-       "| Afghanistan                                                   | Female                                                        | 1985-1990                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 41                                                            |                                                               |\n",
-       "| Afghanistan                                                   | Male                                                          | 2000-2005                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
-       "| Afghanistan                                                   | Male                                                          | 1995-2000                                                     | UNPD_World Population Prospects_2006 (International estimate) | Years                                                         | 42                                                            |                                                               |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  Country.or.Area Subgroup Year     \n",
-       "1 Afghanistan     Female   2000-2005\n",
-       "2 Afghanistan     Female   1995-2000\n",
-       "3 Afghanistan     Female   1990-1995\n",
-       "4 Afghanistan     Female   1985-1990\n",
-       "5 Afghanistan     Male     2000-2005\n",
-       "6 Afghanistan     Male     1995-2000\n",
-       "  Source                                                        Unit  Value\n",
-       "1 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
-       "2 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
-       "3 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
-       "4 UNPD_World Population Prospects_2006 (International estimate) Years 41   \n",
-       "5 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
-       "6 UNPD_World Population Prospects_2006 (International estimate) Years 42   \n",
-       "  Value.Footnotes\n",
-       "1                \n",
-       "2                \n",
-       "3                \n",
-       "4                \n",
-       "5                \n",
-       "6                "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "head(life_expectancy)"
+    "missing <- life_expectancy %>%\n",
+    "  filter(is.na(Value)) %>%\n",
+    "  count()\n",
+    "   # nolint\n",
+    "print(missing)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "e1296a1e-50bb-4ad5-83e1-bf1bc59680b5",
+   "execution_count": null,
+   "id": "9257a115",
    "metadata": {
-    "executionCancelledAt": null,
-    "executionTime": 15,
-    "lastExecutedAt": 1725235245661,
-    "lastExecutedByKernel": "90a47145-5c62-4855-b869-0043b9ce4f18",
-    "lastScheduledRunId": null,
-    "lastSuccessfullyExecutedCode": "# Start coding here\n# Use as many cells as you need",
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in life_expectancy %>% filter(is.na(Value)): could not find function \"%>%\"\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in life_expectancy %>% filter(is.na(Value)): could not find function \"%>%\"\nTraceback:\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Start coding here\n",
-    "# Use as many cells as you need\n",
-    "life_expectancy %>%\n",
-    "  filter(is.na(Value))"
+    "subgroup_data <- life_expectancy %>%\n",
+    "  filter(Year == '2000-2005' & (Subgroup == \"Female\" | Subgroup == \"Male\")) %>%\n",
+    "  spread(key = Subgroup, value = Value) %>%\n",
+    "  # Spread to wide format  # nolint\n",
+    "  mutate(subgroup = ifelse(Female > Male, \"Female\", ifelse(Female < Male, \"Male\", \"Female\"))) # nolint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf0dfd18",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Create a scatter plot with a smooth line\n",
+    "ggplot(subgroup_data, aes(x = Female, y = Male, color = subgroup)) +\n",
+    "  geom_point() + \n",
+    "  #geom_smooth(formula = y ~ x, method = \"lm\", se = FALSE) +\n",
+    "  labs(title = \"Comparison of Values between Male and Female by Country\",\n",
+    "\t   x = \"Male Value\", # nolint\n",
+    "\t   y = \"Female Value\", # nolint\n",
+    "\t   color = \"Dominant Subgroup\") + # nolint\n",
+    "  theme_minimal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95ade052",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "subgroup <- subgroup_data %>%\n",
+    "  summarise(highest_avg_life_expectancy = ifelse(mean(Female, na.rm = TRUE) >\n",
+    "            mean(Male, na.rm = TRUE), \"Female\",\"Male\")) # nolint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff103f99",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "disparities_data <- life_expectancy %>% \n",
+    "  filter(Year == '2000-2005' & (Subgroup == \"Female\" | Subgroup == \"Male\")) %>%\n",
+    "  pivot_wider(names_from = Subgroup, values_from = Value) %>%\n",
+    "  # Spread to wide format  # nolint\n",
+    "  mutate(subgroup = ifelse(Female > Male, \"Female\", ifelse(Female < Male, \"Male\", \"Female\"))) %>%  # nolint\n",
+    "  mutate(disparities = abs(Female - Male)) %>%\n",
+    "  arrange(desc(disparities)) %>%\n",
+    "  slice_max(disparities, n = 3, with_ties = FALSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "908f8ffc",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "disparities <- c(disparities_data$Country.or.Area)"
    ]
   }
  ],
