Add coomented branch with "equal"

--- a/R/Exploring Global Life Expectancy Trend/notebook.ipynb
+++ b/R/Exploring Global Life Expectancy Trend/notebook.ipynb
@@ -173,6 +173,28 @@
    "source": [
     "disparities <- c(disparities_data$Country.or.Area)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ade248a",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Join Male and Female data by 'Country.or.Area' and add a subgroup column\n",
+    "#subgroup <- Female %>%\n",
+    "# inner_join(Male, by = \"Country.or.Area\", suffix = c(\"_female\", \"_male\")) %>%\n",
+    "# mutate(subgroup = ifelse(Value_female > Value_male, \"Female\", \n",
+    "#                       ifelse(Value_female < Value_male, \"Male\", \"Equal\")))\n",
+    "\n",
+    "# View the resulting data\n",
+    "print(subgroup)\n"
+   ]
   }
  ],
  "metadata": {
